# Example-wiringPi

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bme280-i2c.c  bme280-i2c.h  si1132.c  si1132.h  wpi_android.c
app/src/main/cpp/wiringPi/: wpi_android.c
app/src/main/cpp/wiringPi/gpio/: gpio.c  readall.c
app/src/main/cpp/wiringPi/wiringPi/: termios.h  wiringPi.c  wiringSerial.c
app/src/main/java/com/hardkernel/wiringpi/: MainActivity.java
app/src/main/java/com/jw/example/: MainActivity.java
app/src/main/java/com/jw/wiringpi/: wpiAndroid.java
app/src/main/res/menu/: main.xml
gradle/wrapper/: gradle-wrapper.properties
